--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<a [routerLink]="['/cadastro']">Acessar Formulario</a>
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" [routerLink]="['/cadastro']">Cadastro</a>
+</nav>
 
-<router-outlet></router-outlet>
+<div class="container">
+  <div class="row mt-4">
+    <div class="col">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
